Color change of create account button

--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ input.error {
 }
 
 .createAccount button {
-  background-color: #ff0022;
+  background-color: #ee4b6a;
   color: #fff;
   border: 2px solid #fff;
   width: 100%;
